<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".google_map_location" >

    <AutoCompleteTextView
        android:id="@+id/actv_google_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_google_map"
        android:inputType="textAutoComplete">

        <requestFocus />
    </AutoCompleteTextView>


    <Button
        android:id="@+id/bGoogleMap_Surrey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick_Surrey"
        android:text="@string/b_google_map_surrey"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <fragment
        android:id="@+id/fGoogleMap_map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bGoogleMap_burnaby"
        android:layout_below="@+id/bGoogleMapSaveLoaction" />

    <Button
        android:id="@+id/bGoogleMap_burnaby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick_Burnaby"
        android:text="@string/b_google_map_burnaby"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/bGoogleMap_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick_City"
        android:text="@string/b_google_map_city"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/b_google_map_save_location"
        android:id="@+id/bGoogleMapSaveLoaction"
        android:onClick="onClick_saveLocation"
        android:layout_below="@+id/actv_google_map"
        android:enabled="false"
        android:layout_centerHorizontal="true" />

</RelativeLayout>