<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_weight="0.40">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="0"
            android:id="@+id/tv_ea_no_count"
            android:layout_row="0"
            android:layout_column="5"
            android:layout_marginRight="62dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tv_no_title"
            android:id="@+id/tv_ea_no_tit"
            android:layout_row="0"
            android:layout_column="4"
            android:layout_alignTop="@+id/tv_ea_no_count"
            android:layout_toLeftOf="@+id/tv_ea_no_count" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="0"
            android:id="@+id/tv_ea_maybe_count"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_marginRight="27dp"
            android:layout_alignTop="@+id/tv_ea_no_tit"
            android:layout_toLeftOf="@+id/tv_ea_no_tit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tv_maybe_title"
            android:id="@+id/tv_ea_maybe_tit"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_alignTop="@+id/tv_ea_maybe_count"
            android:layout_toLeftOf="@+id/tv_ea_maybe_count" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="0"
            android:id="@+id/tv_ea_yes_count"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginRight="28dp"
            android:layout_alignTop="@+id/tv_ea_maybe_tit"
            android:layout_toLeftOf="@+id/tv_ea_maybe_tit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tv_yes_title"
            android:id="@+id/tv_ea_yes_tit"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_alignTop="@+id/tv_ea_yes_count"
            android:layout_toLeftOf="@+id/tv_ea_yes_count" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ib_ea_add_friend"
            android:src="@drawable/add_icon"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:background="@color/gray"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="442dp"
        android:id="@+id/lvAttending" />
</LinearLayout>